[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/sprites/sWall.png" type="Texture" id=2]
[ext_resource path="res://levels/gamestate.gd" type="Script" id=3]
[ext_resource path="res://assets/sprites/sBg.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/sMap.png" type="Texture" id=6]
[ext_resource path="res://assets/fonts/customfont.tres" type="DynamicFont" id=7]
[ext_resource path="res://timer/timer.gd" type="Script" id=8]

[sub_resource type="ConcavePolygonShape2D" id=1]
segments = PoolVector2Array( 320, 32, 320, 320, 320, 320, 32, 320, 32, 320, 32, 32, 32, 32, 32, 32, 32, 32, 320, 32 )

[sub_resource type="OccluderPolygon2D" id=2]
polygon = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=3]
3/name = "sWall.png 3"
3/texture = ExtResource( 2 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 352, 352 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 1 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "sBg.png 4"
4/texture = ExtResource( 4 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 0, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/occluder = SubResource( 2 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 352, 352, 0, 352, 0, 0, 352, 0 )

[sub_resource type="ConcavePolygonShape2D" id=5]
segments = PoolVector2Array( 32, 32, 320, 32, 320, 32, 320, 320, 320, 320, 32, 320, 32, 320, 32, 32 )

[sub_resource type="TileSet" id=6]
0/name = "sWall.png 0"
0/texture = ExtResource( 2 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 352, 352 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 4 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 5 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0

[sub_resource type="Environment" id=7]
background_mode = 4
tonemap_exposure = 1.88
tonemap_white = 0.11
ss_reflections_fade_in = 1e-05
ssao_radius = 3.07
ssao_intensity = 128.0
glow_intensity = 3.82
glow_strength = 2.0

[node name="World" type="Node2D"]
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 97.1592, 706.727, 311.575, 373.033, 642.892, 765.347 ],
"_edit_vertical_guides_": [ 233.352, 300.496, 796.365, 378.79, 379.497, 658.0 ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Timer" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -92.5
margin_right = 92.5
margin_bottom = 72.0
custom_fonts/font = ExtResource( 7 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ms" type="Timer" parent="CanvasLayer/Timer"]
wait_time = 0.1
autostart = true

[node name="Enemies" type="Node" parent="."]

[node name="Players" type="Node" parent="."]

[node name="Guns" type="Node" parent="."]

[node name="BgMap" type="TileMap" parent="."]
modulate = Color( 1, 1, 1, 0.486275 )
position = Vector2( -403.63, -555.628 )
tile_set = SubResource( 3 )
show_collision = true
format = 1
tile_data = PoolIntArray( 65521, 2, 0, 65522, 2, 0, 65523, 2, 0, 65524, 2, 0, 65525, 2, 0, 65526, 2, 0, 65527, 2, 0, 65528, 2, 0, 65529, 2, 0, 65530, 2, 0, 65531, 2, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 3, 2, 0, 4, 2, 0, 5, 2, 0, 6, 2, 0, 7, 2, 0, 8, 2, 0, 9, 2, 0, 10, 2, 0, 11, 2, 0, 12, 2, 0, 13, 2, 0, 14, 2, 0, 15, 2, 0, 16, 2, 0, 17, 2, 0, 18, 2, 0, 19, 2, 0, 20, 2, 0, 21, 2, 0, 22, 2, 0, 23, 2, 0, 24, 2, 0, 25, 2, 0, 26, 2, 0, 27, 2, 0, 28, 2, 0, 29, 2, 0, 30, 2, 0, 31, 2, 0, 32, 2, 0, 33, 2, 0, 34, 2, 0, 35, 2, 0, 36, 2, 0, 37, 2, 0, 38, 2, 0, 39, 2, 0, 40, 2, 0, 41, 2, 0, 42, 2, 0, 43, 2, 0, 44, 2, 0, 45, 2, 0, 46, 2, 0, 47, 2, 0, 48, 2, 0, 49, 2, 0, 50, 2, 0, 51, 2, 0, 52, 2, 0, 53, 2, 0, 54, 2, 0, 55, 2, 0, 56, 2, 0, 57, 2, 0, 58, 2, 0, 59, 2, 0, 60, 2, 0, 61, 2, 0, 62, 2, 0, 63, 2, 0, 64, 2, 0, 65, 2, 0, 66, 2, 0, 67, 2, 0, 68, 2, 0, 131057, 2, 0, 65604, 2, 0, 196593, 2, 0, 131140, 2, 0, 262129, 2, 0, 196676, 2, 0, 327665, 2, 0, 262212, 2, 0, 393201, 2, 0, 327748, 2, 0, 458737, 2, 0, 393284, 2, 0, 524273, 2, 0, 458820, 2, 0, 589809, 2, 0, 524356, 2, 0, 655345, 2, 0, 589892, 2, 0, 720881, 2, 0, 655364, 4, 0, 655365, 4, 0, 655366, 4, 0, 655367, 4, 0, 655368, 4, 0, 655369, 4, 0, 655370, 4, 0, 655371, 4, 0, 655372, 4, 0, 655373, 4, 0, 655374, 4, 0, 655375, 4, 0, 655376, 4, 0, 655377, 4, 0, 655378, 4, 0, 655379, 4, 0, 655380, 4, 0, 655381, 4, 0, 655382, 4, 0, 655383, 4, 0, 655384, 4, 0, 655428, 2, 0, 786417, 2, 0, 720900, 4, 0, 720901, 4, 0, 720902, 4, 0, 720903, 4, 0, 720904, 4, 0, 720905, 4, 0, 720906, 4, 0, 720907, 4, 0, 720908, 4, 0, 720909, 4, 0, 720910, 4, 0, 720911, 4, 0, 720912, 4, 0, 720913, 4, 0, 720914, 4, 0, 720915, 4, 0, 720916, 4, 0, 720917, 4, 0, 720918, 4, 0, 720919, 4, 0, 720920, 4, 0, 720964, 2, 0, 851953, 2, 0, 786436, 4, 0, 786437, 4, 0, 786438, 4, 0, 786439, 4, 0, 786440, 4, 0, 786441, 4, 0, 786442, 4, 0, 786443, 4, 0, 786444, 4, 0, 786445, 4, 0, 786446, 4, 0, 786447, 4, 0, 786448, 4, 0, 786449, 4, 0, 786450, 4, 0, 786451, 4, 0, 786452, 4, 0, 786453, 4, 0, 786454, 4, 0, 786455, 4, 0, 786456, 4, 0, 786500, 2, 0, 917489, 2, 0, 851972, 4, 0, 851973, 4, 0, 851974, 4, 0, 851975, 4, 0, 851976, 4, 0, 851977, 4, 0, 851978, 4, 0, 851979, 4, 0, 851980, 4, 0, 851981, 4, 0, 851982, 4, 0, 851983, 4, 0, 851984, 4, 0, 851985, 4, 0, 851986, 4, 0, 851987, 4, 0, 851988, 4, 0, 851989, 4, 0, 851990, 4, 0, 851991, 4, 0, 851992, 4, 0, 852036, 2, 0, 983025, 2, 0, 917508, 4, 0, 917509, 4, 0, 917510, 4, 0, 917511, 4, 0, 917512, 4, 0, 917513, 4, 0, 917514, 4, 0, 917515, 4, 0, 917516, 4, 0, 917517, 4, 0, 917518, 4, 0, 917519, 4, 0, 917520, 4, 0, 917521, 4, 0, 917522, 4, 0, 917523, 4, 0, 917524, 4, 0, 917525, 4, 0, 917526, 4, 0, 917527, 4, 0, 917528, 4, 0, 917572, 2, 0, 1048561, 2, 0, 983044, 4, 0, 983045, 4, 0, 983046, 4, 0, 983047, 4, 0, 983048, 4, 0, 983049, 4, 0, 983050, 4, 0, 983051, 4, 0, 983052, 4, 0, 983053, 4, 0, 983054, 4, 0, 983055, 4, 0, 983056, 4, 0, 983057, 4, 0, 983058, 4, 0, 983059, 4, 0, 983060, 4, 0, 983061, 4, 0, 983062, 4, 0, 983063, 4, 0, 983064, 4, 0, 983108, 2, 0, 1114097, 2, 0, 1048580, 4, 0, 1048581, 4, 0, 1048582, 4, 0, 1048583, 4, 0, 1048584, 4, 0, 1048585, 4, 0, 1048586, 4, 0, 1048587, 4, 0, 1048588, 4, 0, 1048589, 4, 0, 1048590, 4, 0, 1048591, 4, 0, 1048592, 4, 0, 1048593, 4, 0, 1048594, 4, 0, 1048595, 4, 0, 1048596, 4, 0, 1048597, 4, 0, 1048598, 4, 0, 1048599, 4, 0, 1048600, 4, 0, 1048644, 2, 0, 1179633, 2, 0, 1114116, 4, 0, 1114117, 4, 0, 1114118, 4, 0, 1114119, 4, 0, 1114120, 4, 0, 1114121, 4, 0, 1114122, 4, 0, 1114123, 4, 0, 1114124, 4, 0, 1114125, 4, 0, 1114126, 4, 0, 1114127, 4, 0, 1114128, 4, 0, 1114129, 4, 0, 1114130, 4, 0, 1114131, 4, 0, 1114132, 4, 0, 1114133, 4, 0, 1114134, 4, 0, 1114135, 4, 0, 1114136, 4, 0, 1114180, 2, 0, 1245169, 2, 0, 1179652, 4, 0, 1179653, 4, 0, 1179654, 4, 0, 1179655, 4, 0, 1179656, 4, 0, 1179657, 4, 0, 1179658, 4, 0, 1179659, 4, 0, 1179660, 4, 0, 1179661, 4, 0, 1179662, 4, 0, 1179663, 4, 0, 1179664, 4, 0, 1179665, 4, 0, 1179666, 4, 0, 1179667, 4, 0, 1179668, 4, 0, 1179669, 4, 0, 1179670, 4, 0, 1179671, 4, 0, 1179672, 4, 0, 1179716, 2, 0, 1310705, 2, 0, 1245188, 4, 0, 1245189, 4, 0, 1245190, 4, 0, 1245191, 4, 0, 1245192, 4, 0, 1245193, 4, 0, 1245194, 4, 0, 1245195, 4, 0, 1245196, 4, 0, 1245197, 4, 0, 1245198, 4, 0, 1245199, 4, 0, 1245200, 4, 0, 1245201, 4, 0, 1245202, 4, 0, 1245203, 4, 0, 1245204, 4, 0, 1245205, 4, 0, 1245206, 4, 0, 1245207, 4, 0, 1245208, 4, 0, 1245252, 2, 0, 1376241, 2, 0, 1310724, 4, 0, 1310725, 4, 0, 1310726, 4, 0, 1310727, 4, 0, 1310728, 4, 0, 1310729, 4, 0, 1310730, 4, 0, 1310731, 4, 0, 1310732, 4, 0, 1310733, 4, 0, 1310734, 4, 0, 1310735, 4, 0, 1310736, 4, 0, 1310737, 4, 0, 1310738, 4, 0, 1310739, 4, 0, 1310740, 4, 0, 1310741, 4, 0, 1310742, 4, 0, 1310743, 4, 0, 1310744, 4, 0, 1310788, 2, 0, 1441777, 2, 0, 1376260, 4, 0, 1376261, 4, 0, 1376262, 4, 0, 1376263, 4, 0, 1376264, 4, 0, 1376265, 4, 0, 1376266, 4, 0, 1376267, 4, 0, 1376268, 4, 0, 1376269, 4, 0, 1376270, 4, 0, 1376271, 4, 0, 1376272, 4, 0, 1376273, 4, 0, 1376274, 4, 0, 1376275, 4, 0, 1376276, 4, 0, 1376277, 4, 0, 1376278, 4, 0, 1376279, 4, 0, 1376280, 4, 0, 1376324, 2, 0, 1507313, 2, 0, 1441796, 4, 0, 1441797, 4, 0, 1441798, 4, 0, 1441799, 4, 0, 1441800, 4, 0, 1441801, 4, 0, 1441802, 4, 0, 1441803, 4, 0, 1441804, 4, 0, 1441805, 4, 0, 1441806, 4, 0, 1441807, 4, 0, 1441808, 4, 0, 1441809, 4, 0, 1441810, 4, 0, 1441811, 4, 0, 1441812, 4, 0, 1441813, 4, 0, 1441814, 4, 0, 1441815, 4, 0, 1441816, 4, 0, 1441860, 2, 0, 1572849, 2, 0, 1507333, 4, 0, 1507334, 4, 0, 1507335, 4, 0, 1507336, 4, 0, 1507337, 4, 0, 1507338, 4, 0, 1507339, 4, 0, 1507340, 4, 0, 1507341, 4, 0, 1507342, 4, 0, 1507343, 4, 0, 1507344, 4, 0, 1507345, 4, 0, 1507346, 4, 0, 1507347, 4, 0, 1507348, 4, 0, 1507349, 4, 0, 1507350, 4, 0, 1507351, 4, 0, 1507352, 4, 0, 1507396, 2, 0, 1638385, 2, 0, 1572932, 2, 0, 1703921, 2, 0, 1638468, 2, 0, 1769457, 2, 0, 1704004, 2, 0, 1834993, 2, 0, 1769540, 2, 0, 1900529, 2, 0, 1835076, 2, 0, 1966065, 2, 0, 1900612, 2, 0, 2031601, 2, 0, 1966148, 2, 0, 2097137, 2, 0, 2031684, 2, 0, 2162673, 2, 0, 2097220, 2, 0, 2228209, 2, 0, 2162756, 2, 0, 2293745, 2, 0, 2228292, 2, 0, 2359281, 2, 0, 2293828, 2, 0, 2424817, 2, 0, 2359364, 2, 0, 2490353, 2, 0, 2424900, 2, 0, 2555889, 2, 0, 2490436, 2, 0, 2621425, 2, 0, 2555972, 2, 0, 2686961, 2, 0, 2621508, 2, 0, 2752497, 2, 0, 2687044, 2, 0, 2818033, 2, 0, 2752580, 2, 0, 2883569, 2, 0, 2818116, 2, 0, 2949105, 2, 0, 2883652, 2, 0, 3014641, 2, 0, 2949188, 2, 0, 3080177, 2, 0, 3014724, 2, 0, 3145713, 2, 0, 3080260, 2, 0, 3211249, 2, 0, 3145796, 2, 0, 3276785, 2, 0, 3211332, 2, 0, 3342321, 2, 0, 3276868, 2, 0, 3407857, 2, 0, 3342404, 2, 0, 3473393, 2, 0, 3407940, 2, 0, 3538929, 2, 0, 3473476, 2, 0, 3604465, 2, 0, 3539012, 2, 0, 3670001, 2, 0, 3670002, 2, 0, 3670003, 2, 0, 3670004, 2, 0, 3670005, 2, 0, 3670006, 2, 0, 3670007, 2, 0, 3670008, 2, 0, 3670009, 2, 0, 3670010, 2, 0, 3670011, 2, 0, 3670012, 2, 0, 3670013, 2, 0, 3670014, 2, 0, 3670015, 2, 0, 3604480, 2, 0, 3604481, 2, 0, 3604482, 2, 0, 3604483, 2, 0, 3604484, 2, 0, 3604485, 2, 0, 3604486, 2, 0, 3604487, 2, 0, 3604488, 2, 0, 3604489, 2, 0, 3604490, 2, 0, 3604491, 2, 0, 3604492, 2, 0, 3604493, 2, 0, 3604494, 2, 0, 3604495, 2, 0, 3604496, 2, 0, 3604497, 2, 0, 3604498, 2, 0, 3604499, 2, 0, 3604500, 2, 0, 3604501, 2, 0, 3604502, 2, 0, 3604503, 2, 0, 3604504, 2, 0, 3604505, 2, 0, 3604506, 2, 0, 3604507, 2, 0, 3604508, 2, 0, 3604509, 2, 0, 3604510, 2, 0, 3604511, 2, 0, 3604512, 2, 0, 3604513, 2, 0, 3604514, 2, 0, 3604515, 2, 0, 3604516, 2, 0, 3604517, 2, 0, 3604518, 2, 0, 3604519, 2, 0, 3604520, 2, 0, 3604521, 2, 0, 3604522, 2, 0, 3604523, 2, 0, 3604524, 2, 0, 3604525, 2, 0, 3604526, 2, 0, 3604527, 2, 0, 3604528, 2, 0, 3604529, 2, 0, 3604530, 2, 0, 3604531, 2, 0, 3604532, 2, 0, 3604533, 2, 0, 3604534, 2, 0, 3604535, 2, 0, 3604536, 2, 0, 3604537, 2, 0, 3604538, 2, 0, 3604539, 2, 0, 3604540, 2, 0, 3604541, 2, 0, 3604542, 2, 0, 3604543, 2, 0, 3604544, 2, 0, 3604545, 2, 0, 3604546, 2, 0, 3604547, 2, 0, 3604548, 2, 0 )

[node name="sMap" type="Sprite" parent="."]
position = Vector2( 512.778, 514.45 )
scale = Vector2( 1.02037, 1.00626 )
texture = ExtResource( 6 )

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource( 6 )
cell_size = Vector2( 342, 339 )
format = 1
tile_data = PoolIntArray( 65537, 0, 0 )

[node name="PlayerSpawn" type="Position2D" parent="."]
position = Vector2( 500.124, 519.005 )

[node name="EnemySpawnTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
pause_mode = 2
process_priority = 1
environment = SubResource( 7 )

[node name="GunSpawnTImer" type="Timer" parent="."]
wait_time = 16.0
autostart = true

[node name="EnemySpawnIntensifier" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 507.985, 525.46 )
offset = Vector2( -7.045, -103.143 )
current = true
zoom = Vector2( 0.5, 0.5 )
limit_left = 986
limit_top = 348
limit_right = 1007
limit_bottom = 517

[connection signal="timeout" from="CanvasLayer/Timer/ms" to="CanvasLayer/Timer" method="_on_ms_timeout"]
[connection signal="timeout" from="EnemySpawnTimer" to="." method="_on_EnemySpawnTimer_timeout"]
[connection signal="timeout" from="GunSpawnTImer" to="." method="_on_GunSpawnTImer_timeout"]
[connection signal="timeout" from="EnemySpawnIntensifier" to="." method="_on_EnemySpawnIntensifier_timeout"]
